; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_implglue.c_update_hash_impl.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rsaenh/extr_implglue.c_update_hash_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32, i32 }

@NTE_BAD_ALGID = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @update_hash_impl(i32 %0, %struct.TYPE_3__* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %6, align 4
  switch i32 %10, label %53 [
    i32 134, label %11
    i32 133, label %17
    i32 132, label %23
    i32 131, label %29
    i32 130, label %35
    i32 129, label %41
    i32 128, label %47
  ]

11:                                               ; preds = %4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 6
  %14 = load i32*, i32** %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = call i32 @md2_process(i32* %13, i32* %14, i32 %15)
  br label %57

17:                                               ; preds = %4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 5
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @MD4Update(i32* %19, i32* %20, i32 %21)
  br label %57

23:                                               ; preds = %4
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 4
  %26 = load i32*, i32** %8, align 8
  %27 = load i32, i32* %9, align 4
  %28 = call i32 @MD5Update(i32* %25, i32* %26, i32 %27)
  br label %57

29:                                               ; preds = %4
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 3
  %32 = load i32*, i32** %8, align 8
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @A_SHAUpdate(i32* %31, i32* %32, i32 %33)
  br label %57

35:                                               ; preds = %4
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 2
  %38 = load i32*, i32** %8, align 8
  %39 = load i32, i32* %9, align 4
  %40 = call i32 @SHA256_Update(i32* %37, i32* %38, i32 %39)
  br label %57

41:                                               ; preds = %4
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 1
  %44 = load i32*, i32** %8, align 8
  %45 = load i32, i32* %9, align 4
  %46 = call i32 @SHA384_Update(i32* %43, i32* %44, i32 %45)
  br label %57

47:                                               ; preds = %4
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %49 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %48, i32 0, i32 0
  %50 = load i32*, i32** %8, align 8
  %51 = load i32, i32* %9, align 4
  %52 = call i32 @SHA512_Update(i32* %49, i32* %50, i32 %51)
  br label %57

53:                                               ; preds = %4
  %54 = load i32, i32* @NTE_BAD_ALGID, align 4
  %55 = call i32 @SetLastError(i32 %54)
  %56 = load i32, i32* @FALSE, align 4
  store i32 %56, i32* %5, align 4
  br label %59

57:                                               ; preds = %47, %41, %35, %29, %23, %17, %11
  %58 = load i32, i32* @TRUE, align 4
  store i32 %58, i32* %5, align 4
  br label %59

59:                                               ; preds = %57, %53
  %60 = load i32, i32* %5, align 4
  ret i32 %60
}

declare dso_local i32 @md2_process(i32*, i32*, i32) #1

declare dso_local i32 @MD4Update(i32*, i32*, i32) #1

declare dso_local i32 @MD5Update(i32*, i32*, i32) #1

declare dso_local i32 @A_SHAUpdate(i32*, i32*, i32) #1

declare dso_local i32 @SHA256_Update(i32*, i32*, i32) #1

declare dso_local i32 @SHA384_Update(i32*, i32*, i32) #1

declare dso_local i32 @SHA512_Update(i32*, i32*, i32) #1

declare dso_local i32 @SetLastError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
